--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -28,15 +28,14 @@
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
-    }.
+    }
 
     section#login > div#formulario {
         float: left;
         width: 50%;
-        height: 100%;
     }
     
 }
