--- a/estilos/style.css
+++ b/estilos/style.css
@@ -54,3 +54,16 @@ section#login > div#formulario {
     display: block;
     padding: 10px;
 }
+
+div#formulario >h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+div#formulario > p {
+    font-size: 0.8em;
+}
+
+fieldset#log {
+    background-color: #5f2c82;
+    font-size: ;
+}
