--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,7 +3,7 @@
 /*
     Paleta de cores
     Verde: #49a09d
-    Lila: #5f2c82
+    Lilas: #5f2c82
 
 */
 
@@ -45,6 +45,7 @@ section#login {
 }
 
 section#login > div#imagem {
+    display: block;
     background: #5f2c82 url(../imagens/pexels-daniel-watson-1487154.jpg) no-repeat;    
     background-size: cover; 
     height: 200px;
@@ -55,7 +56,7 @@ section#login > div#formulario {
     padding: 10px;
 }
 
-div#formulario >h1 {
+div#formulario > h1 {
     text-align: center;
     margin-bottom: 10px;
 }
@@ -63,7 +64,73 @@ div#formulario > p {
     font-size: 0.8em;
 }
 
-fieldset#log {
+form > div.campo {
     background-color: #5f2c82;
-    font-size: ;
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
 }
+
+div.campo > label {
+    display: none;
+}
+div.campo > span {
+    color: white;
+    background-color: black;
+    font-size: 2em;
+    width: 40px;
+    padding: 4px;
+}    
+div.campo > input {
+    background-color: #96f5f2;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    transform: translateY(-11px);
+    height: 100%;
+    border: none;
+    border-radius: 8px;
+    padding: 9px;
+    
+       
+}
+
+form > input[type = submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #2d6462;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 8px;
+    margin-top: 5px;
+    background-color: white;
+    color: #2d6462;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+form > a.botao:hover {
+    background-color: #6cd3cf;
+}
+
+form > a.botao > span {
+    font-size: 0.8em;
+} 
