--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -7,7 +7,7 @@
     
     section#login {
         width: 80vw;
-        height: 300px;
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -16,7 +16,7 @@
         height: 100%;
     }
 
-    section#login > div#formularion {
+    section#login > div#formulario {
         float: right;
         width: 70%;
     }
@@ -29,6 +29,7 @@
     }
     section#login {
         width: 950px;
+        height: 300px;
     }
 
     section#login > div#imagem {
@@ -42,8 +43,13 @@
         width: 50%;
     }
 
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+
     div#formulario > p {
         font-size: 1em;
+        margin: 12px 0px;
     }
     
 }
