--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,16 +30,15 @@ main {
 section#login {
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 50%;    
     overflow: hidden;
-
     background-color: white;
     width: 250px;
     height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.481);
 
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -66,6 +65,7 @@ div#formulario > p {
 
 form > div.campo {
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     width: 100%;
     display: block;
     height: 40px;
@@ -77,8 +77,7 @@ div.campo > label {
     display: none;
 }
 div.campo > span {
-    color: white;
-    background-color: black;
+    color: white;    
     font-size: 2em;
     width: 40px;
     padding: 4px;
@@ -86,14 +85,17 @@ div.campo > span {
 div.campo > input {
     background-color: #96f5f2;
     font-size: 1em;
-    width: calc(100% - 45px);
-    transform: translateY(-11px);
+    width: calc(100% - 45px);    
     height: 100%;
     border: none;
     border-radius: 8px;
-    padding: 9px;
-    
-       
+    padding: 4px;
+    transform: translateY(-13px);      
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+    border: none;
 }
 
 form > input[type = submit] {
